unpackaged/objects/copado__Continuous_Integration_Permission__c.object
<CustomObject>
	<fields>
		<fullName>copado__Access__c</fullName>
		<label>Access</label>
		<type>Picklist</type>
		<valueSet>
			<valueSetDefinition>
				<value>
					<fullName>Read Only</fullName>
					<default>true</default>
					<label>Read Only</label>
				</value>
				<value>
					<fullName>Run Continuous Integration</fullName>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<fields>
		<fullName>copado__Continuous_Integration__c</fullName>
		<label>Continuous Integration</label>
		<referenceTo>copado__Continuous_Integration__c</referenceTo>
		<relationshipLabel>Continuous Integration Permissions</relationshipLabel>
		<relationshipName>Continuous_Integration_Permissions</relationshipName>
		<relationshipOrder>0</relationshipOrder>
		<type>MasterDetail</type>
		<writeRequiresMasterRead>true</writeRequiresMasterRead>
	</fields>
	<fields>
		<fullName>copado__Email_Notification__c</fullName>
		<label>Email Notification</label>
		<type>MultiselectPicklist</type>
		<valueSet>
			<valueSetDefinition>
				<value>
					<fullName>On Build Failure</fullName>
				</value>
				<value>
					<fullName>On Build Success</fullName>
				</value>
				<value>
					<fullName>On Deploy Failure</fullName>
				</value>
				<value>
					<fullName>On Deploy Success</fullName>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<fields>
		<fullName>copado__Email_Template_Name__c</fullName>
		<inlineHelpText>Select here the Email Template Name. If your template is not visible here, it must be added by the Administrator by customising this picklist on the Continuous Integration Permission object.</inlineHelpText>
		<label>Email Template Name</label>
		<type>Picklist</type>
		<valueSet>
			<valueSetDefinition>
				<value>
					<fullName>Build Task Status Notification</fullName>
					<default>true</default>
					<label>Build Task Status Notification</label>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<fields>
		<fullName>copado__User__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>User</label>
		<referenceTo>User</referenceTo>
		<relationshipLabel>Continuous Integration Permissions</relationshipLabel>
		<relationshipName>Continuous_Integration_Permissions</relationshipName>
		<type>Lookup</type>
	</fields>
	<label>Continuous Integration Permission</label>
	<listViews>
		<fullName>copado__All</fullName>
		<columns>NAME</columns>
		<columns>copado__Continuous_Integration__c</columns>
		<columns>copado__User__c</columns>
		<columns>copado__Access__c</columns>
		<columns>copado__Email_Notification__c</columns>
		<filterScope>Everything</filterScope>
		<label>All</label>
		<language>en_US</language>
	</listViews>
	<nameField>
		<displayFormat>CIP-{00000}</displayFormat>
		<label>Permission Ref</label>
		<type>AutoNumber</type>
	</nameField>
	<pluralLabel>Continuous Integration Permissions</pluralLabel>
	<sharingModel>ControlledByParent</sharingModel>
</CustomObject>